# Amanuensis

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
crates/amanuensis-gui/: Cargo.toml  tauri.conf.json
crates/amanuensis-gui/capabilities/: default.json
crates/amanuensis-gui/data/: bestiary_images.json  creature_values.json
crates/amanuensis-gui/src/: commands.rs  main.rs  state.rs
crates/amanuensis-gui/src/commands/: bestiary.rs  characters.rs  data.rs  database.rs  mod.rs  portraits.rs  rank.rs  scanning.rs  updates.rs
crates/amanuensis-gui/ui/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
crates/amanuensis-gui/ui/src/: index.css  main.tsx  types.ts
crates/amanuensis-gui/ui/src/lib/: bestiary.ts  commands.ts  constants.ts  dateUtils.ts  fighterStats.ts  (+5 more)
crates/scribius-core/: Cargo.toml
crates/scribius-core/data/: creatures.csv  trainers.json
crates/scribius-core/src/: error.rs  lib.rs
crates/scribius-core/src/data/: creatures.rs  mod.rs  trainers.rs
crates/scribius-core/src/db/: mod.rs  queries.rs  schema.rs
crates/scribius-core/src/models/: character.rs  lasty.rs  log_meta.rs  mod.rs  trainer.rs
crates/scribius-core/src/parser/: events.rs  line_classifier.rs  mod.rs  patterns.rs  timestamp.rs
crates/scribius-gui/: Cargo.toml  tauri.conf.json
crates/scribius-gui/icons/: icon.icns
crates/scribius-gui/src/: commands.rs  main.rs  state.rs
crates/scribius-gui/ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
crates/scribius-gui/ui/src/: index.css  main.tsx  types.ts
(+120 files in other folders)
