[package]
name = "amanuensis-gui"
version = "0.2.3"
edition = "2021"

[dependencies]
amanuensis-core = { path = "../amanuensis-core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
base64 = "0.22"
urlencoding = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
