[package]
name = "scribius-core"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"
once_cell = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
log = "0.4"
encoding_rs = "0.8"

[dev-dependencies]
tempfile = "3"
