[package]
name = "scribius-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
scribius-core = { path = "../scribius-core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
